--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <html>
 <head>
-<title>Crimson Twiglets Web Page</title>
+<title>Pourline</title>
 </head>
 <body>
-<h1 style="align-centre;">Welcome to Crimson Twiglets Web Page</h1>
-
+<h1 style="text-align: centre;">How may we help today?</h1>
+<nav id="NavBar">
+<ul>
+  <a href="">Home</a>
+<a href="">Coffee</a>
+  <a href="">Beans/a>
+  <a href="">Supplies and Tools</a>  
+</ul>
+</nav>
+  <img src="Coffee.webp"></img>
 </body>
 
 
